resolve comments